feat: use maven-hosted dbusmenu4j plus logger